--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </section>
       <!-- Преимущества -->
-      <!-- <section class="benefits section">
+      <section class="benefits section">
         <div class="container">
           <ul class="menu-benefits list">
             <li class="menu-item-benefits">
@@ -189,9 +189,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Примеры работ -->
-      <!-- <section class="example section">
+      <section class="example section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="menu-example list">
@@ -218,9 +218,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Команда -->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="menu-team list">
@@ -374,7 +374,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Сustomers -->
       <!-- <section class="section">
         <div class="container">
